--- a/pom.xml
+++ b/pom.xml
@@ -89,14 +89,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
             </plugin>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>dist</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
